--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,3 +5,74 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
+.boximage {
+  background-color: aquamarine;
+  width: 230px;
+  height: 631px;
+  margin: 10px;
+  border-radius: 8px;
+}
+.imageprofile {
+  width: 200px;
+  height: 200px;
+  object-fit: contain;
+  border-radius: 50%;
+}
+.editprofile {
+  width: 544px;
+  height: 183px;
+  border-radius: 8px;
+  background-color: aquamarine;
+  margin-top: 10px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+textarea {
+  width: 350px;
+  height: 100px;
+  border-radius: 8px;
+  margin-bottom: 70px;
+}
+.special {
+  height: auto;
+  margin-top: 25px;
+}
+.editprofilecertification {
+  width: 544px;
+  height: 111px;
+  border-radius: 8px;
+  background-color: aquamarine;
+  margin-top: 10px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.availability {
+  width: 280px;
+  height: 292px;
+  border-radius: 8px;
+  background-color: aquamarine;
+  margin-left: 128px;
+  margin-top: 10px;
+}
+.cancelation {
+  width: 280px;
+  height: 183px;
+  border-radius: 8px;
+  background-color: aquamarine;
+  margin-left: 128px;
+  margin-top: 10px;
+}
+.payment {
+  width: 280px;
+  height: 111px;
+  border-radius: 8px;
+  background-color: aquamarine;
+  margin-left: 128px;
+  margin-top: 10px;
+}
+.sectionprofile {
+  display: grid;
+  align-items: stretch;
+}
