--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -181,3 +181,36 @@ textarea {
   transform: translateY(0);
   transition: transform 0.25s ease-out;
 }
+
+.PHbg-green {
+  background-color: #c9e9b8;
+  width: 100%;
+  height: 230px;
+}
+
+.PHbox {
+  width: 316px;
+  height: 200px;
+  background-color: #c9e9b8;
+  margin-right: 35px;
+  border-radius: 18px;
+}
+.PHboxcontainer {
+  margin-top: 75px;
+  margin-left: 250px;
+}
+.bggreenflex {
+  background-color: #c9e9b8;
+  width: 750px;
+}
+.PHimage {
+  width: 750px;
+  height: 550px;
+  /* object-fit: ; */
+}
+.h2ph {
+  margin-top: 135px;
+}
+.strongtext {
+  color: #198754;
+}
