--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -116,6 +116,7 @@ textarea {
   background-color: white;
   margin: 15px;
 }
+
 .bg-green {
   background-color: #c9e9b8;
 }
@@ -213,4 +214,103 @@ textarea {
 }
 .strongtext {
   color: #198754;
+}
+
+/* ////////////////////////////Userview */
+.bgpurple {
+  background-color: #c9e9b8;
+  width: 100%;
+  height: 220px;
+}
+
+.intro {
+  text-align: center;
+  font-family: "Abhaya Libre", serif;
+  color: black;
+}
+
+.title1 {
+  font-family: "Abhaya Libre", serif;
+  color: black;
+  margin-left: 75px;
+}
+.title3 {
+  font-family: "Abhaya Libre", serif;
+  color: black;
+}
+.bggrey {
+  background-color: #e3e2e8;
+  width: 100%;
+  height: 230px;
+}
+@media (max-width: 600px) {
+  .bggrey {
+    background-color: white;
+  }
+}
+
+.list {
+  font-family: "Karla", sans-serif;
+}
+
+@media (max-width: 500px) {
+  .introtitle {
+    margin-bottom: 65px;
+  }
+}
+@media (max-width: 500px) {
+  .title1 {
+    font-size: 20px;
+    white-space: nowrap;
+  }
+}
+@media (max-width: 500px) {
+  .title2 {
+    font-size: 15px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.buttonmainpage {
+  background-color: #198754;
+  border: 1px solid #198754;
+  border-radius: 3px;
+  height: 35px;
+  margin: auto;
+  width: auto;
+  color: white;
+}
+.buttonmainpageindividual {
+  background-color: #198754;
+  border: 1px solid #198754;
+  border-radius: 3px;
+  height: 35px;
+  margin: auto;
+  width: auto;
+  color: white;
+}
+@media (max-width: 500px) {
+  .buttonmainpageindividual {
+    margin-bottom: 5px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.inputindividual {
+  max-width: 250px;
+  height: 36px;
+}
+
+.squeremainpage img {
+  width: 300px;
+  height: 100%;
+}
+.grooming {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
 }
