new home page changes

--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -7,10 +7,10 @@
 */
 .boximage {
   background-color: #c9e9b8;
-  width: 230px;
-  height: 631px;
+  width: 250px;
+  height: auto;
   margin: 10px;
-  border-radius: 8px;
+  border-radius: 10px;
 }
 .imageprofile {
   width: 200px;
@@ -19,8 +19,8 @@
   border-radius: 50%;
 }
 .editprofile {
-  width: 544px;
-  height: 183px;
+  width: 500px;
+  height: 150px;
   border-radius: 8px;
   background-color: #c9e9b8;
   margin-top: 10px;
@@ -30,16 +30,16 @@
 }
 textarea {
   width: 350px;
-  height: 100px;
-  border-radius: 8px;
-  margin-bottom: 70px;
+  height: 80px;
+  border-radius: 10px;
+  margin-bottom: 50px;
 }
 .special {
   height: auto;
-  margin-top: 25px;
+  margin-top: 15px;
 }
 .editprofilecertification {
-  width: 544px;
+  width: 500px;
   height: 111px;
   border-radius: 8px;
   background-color: #c9e9b8;
@@ -55,6 +55,11 @@ textarea {
   background-color: #c9e9b8;
   margin-left: 128px;
   margin-top: 10px;
+}
+.btn-profile {
+  background-color: #c9e9b8;
+  width: 200px;
+  padding: 10px;
 }
 .cancelation {
   width: 280px;
@@ -78,9 +83,8 @@ textarea {
 }
 
 .text1 {
-  display: grid;
-  margin-top: 250px;
-  margin-left: 100px;
+  display: table-cell;
+  vertical-align: middle;
 }
 .image1 {
   width: 90%;
@@ -95,7 +99,8 @@ textarea {
   height: 100vh;
 }
 .greenbutton {
-  margin-left: 370px;
+  margin: 0;
+  align: center;
 }
 
 /* ///////////////////////////////////////// */
@@ -113,8 +118,16 @@ textarea {
   width: 200px;
   height: 200px;
   border-radius: 25px;
-  margin: 70px;
+  margin: 10px;
+  margin-left: 55px;
   /* margin-right: 155px; */
+}
+.squeremainpage-rigth {
+  width: 300px;
+  height: 200px;
+  border-radius: 25px;
+  margin-right: 25px;
+  margin: 10px;
 }
 
 .bg-green {
@@ -341,9 +354,25 @@ textarea {
   height: 80px;
   border-radius: 8px;
   background-color: #c9e9b8;
-  margin-top: 15px;
 }
 .image-user {
   width: 200px;
   height: 200px;
+  border-radius: 50%;
+  border: 1px solid #198754;
+  margin-top: 10px;
+}
+.bg-profiletwo {
+  background-color: #198754;
+  width: 600px;
+  border-radius: 5%;
+  height: auto;
+  padding: 30px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.center {
+  display: table;
+  text-align: center;
 }
