--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -92,6 +92,22 @@ textarea {
   padding: 0;
   margin: 0;
 }
+@media (max-width: 500px) {
+  .image1 {
+    width: 100%;
+    height: 50vh;
+    padding: 0;
+    margin: 0;
+  }
+  .squeremainpage {
+    width: 200px;
+    height: 200px;
+    border-radius: 25px;
+    margin: 10px;
+    /* margin-left: 55px; */
+    /* margin-right: 155px; */
+  }
+}
 /* ///////////////////////////////////////////////// */
 .mainpagebox {
   background-color: #c9e9b8;
@@ -435,19 +451,16 @@ textarea {
     hsla(99, 53%, 82%, 1) 25%,
     hsla(152, 69%, 31%, 1) 100%
   );
-
   background: -moz-linear-gradient(
     90deg,
     hsla(99, 53%, 82%, 1) 25%,
     hsla(152, 69%, 31%, 1) 100%
   );
-
   background: -webkit-linear-gradient(
     90deg,
     hsla(99, 53%, 82%, 1) 25%,
     hsla(152, 69%, 31%, 1) 100%
   );
-
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#C9E9B8", endColorstr="#198754", GradientType=1 );
   display: grid;
   justify-content: center;
